# WeatherAPI

./: .env.example  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
.config/: nginx.conf
.github/workflows/: pytest.yml
app/application/api/: lifespan.py  main.py
app/application/api/auth/: dto.py  router.py
app/application/api/exceptions/: user.py
app/application/api/user/: auth.py  (+2 more)
app/application/auth/: auth_decorator.py  dto.py  login_user.py  me_user.py  validate_token.py
app/application/common/: auth_decorator.py  interactor.py
app/application/di/: container.py
app/application/location/: add_location.py  delete_location.py  dto.py  get_all_location.py  get_location.py
app/application/user/: add_user.py  delete_user.py  dto.py  get_all_user.py  get_user.py
app/application/weather/: get_weather.py
app/bootstrap/: di.py
app/domain/entities/: location.py  user.py  weather.py
app/domain/exceptions/: base.py  raw_bassword.py  user_email.py
app/domain/value_objects/: base.py  hashed_password.py  raw_password.py  user_email.py
app/infra/container/: init.py
app/infra/exceptions/: base.py  repository.py
app/infra/logger/: logger.py
app/infra/repository/: base.py  memory.py
app/infrastructure/auth/: access_service.py  access_service_api.py  access_token_processor.py  config.py  password_hasher.py  token_access_service.py
app/infrastructure/cache/: base.py  config.py  converters.py  redis.py
app/infrastructure/database/: config.py  custom_types.py  init.py  models.py  utlis.py
app/infrastructure/email/: aio_email_client.py  base.py  config.py  converters.py  email_client.py  email_config_factory.py  init.py  user_email_notifications.py
app/infrastructure/exceptions/: auth.py  email_service.py  jwt.py  repository.py  weather.py
app/infrastructure/jwt/: access_token.py  base.py  config.py  jwt_processor.py
app/infrastructure/logger/: base.py  logger.py
app/infrastructure/message_broker/: base.py  config.py  constants.py  init.py  message.py  message_broker.py  message_broker_factory.py
app/infrastructure/repository/: api.py  base.py  converters.py  filters.py  memory.py  postgres.py
app/infrastructure/task_queue/: init.py  tasks.py  user_tasks.py  weather_tasks.py
app/infrastructure/utils/: utils.py
app/infrastructure/weather/: base.py  config.py  converters.py  open_weather_api.py
app/presentation/admin/: lifespan.py  main.py
app/presentation/api/: lifespan.py  main.py
app/presentation/bot/: factory.py  main.py  user.py
app/presenter/di/: container.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/cache/: test_cache_service.py
app/tests/domain/: test_location.py  test_user.py
app/tests/infra/: test_repository.py
app/tests/infrastructure/: test_repository.py
app/utils/: async_to_sync.py
docker_compose/: app.yaml  cache.yaml  redis.yaml  storage.yaml  web_server.yaml
migrations/: env.py
migrations/versions/: ee1d1993485b_create_users_and_locations_tables.py
tests/: conftest.py  fixtures.py
tests/application/api/: conftest.py
tests/domain/entities/: test_user.py
tests/domain/value_objects/: test_raw_password.py
tests/infrastructure/auth/: test_auth.py
tests/infrastructure/message_broker/: test_message_broker.py
(+76 files in other folders)
