[tool.poetry]
name = "weatherapi"
version = "0.1.0"
description = ""
authors = ["namig <guseinovnamig41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
punq = "^0.7.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pre-commit = "^4.0.1"
black = "^24.10.0"
pydantic-settings = "^2.6.1"
faker = "^33.1.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
jose = "^1.0.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
jwt = "^1.3.1"
pyjwt = "^2.10.1"
ipython = "^8.30.0"
types-passlib = "^1.7.7.20240819"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["core", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
]
known_fastapi=["fastapi","starlette"]
known_first_party=["application","domain","infra","logic","settings","tests"]
sections=[
    "FUTURE",
    "STDLIB",
    "FASTAPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]